tests/error/native_unsupported_builtin_write.vbc
int main() {
    write(STDOUT, 1);
    return 0;
}

